<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_primary">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_secondary"
        android:padding="@dimen/padding_medium"
        android:elevation="4dp">


        <TextView
            android:id="@+id/appNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/accent_yellow"
            android:textSize="@dimen/text_xlarge"
            android:textStyle="bold"
            android:layout_centerVertical="true" />


        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_secondary"
            android:text="@string/logout"
            android:textColor="@color/accent_yellow"
            android:textSize="@dimen/text_small"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome!"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_xlarge"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Find your perfect parking spot"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_medium"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:hint="@string/search_hint"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_muted"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/margin_small" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/button_primary"
            android:text="@string/search_button"
            android:textColor="@color/text_on_yellow"
            android:textStyle="bold"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby_parking"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/margin_small" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/parkingSlotsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:clipToPadding="false" />

</LinearLayout>